[gd_scene load_steps=3 format=3 uid="uid://ihsec4gesy6t"]

[ext_resource type="Script" path="res://levels/manager.gd" id="1_ox63w"]
[ext_resource type="Theme" uid="uid://b3x8x201hf367" path="res://ui/new_theme.tres" id="2_bfdem"]

[node name="Manager" type="Node"]
script = ExtResource("1_ox63w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bfdem")

[node name="Panel" type="Panel" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -250.0
offset_right = 259.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -196.5
offset_right = 168.0
offset_bottom = 196.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Paused"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Play" type="Button" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.57
text = "Resume
"

[node name="Control4" type="Control" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Quit" type="Button" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.57
text = "Quit"

[node name="Control3" type="Control" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="CanvasLayer/PauseMenu/Panel/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
